parser/cpp_parser.go
// Code generated from Cpp.g4 by ANTLR 4.13.2. DO NOT EDIT.

package parser // Cpp

import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type CppParser struct {
	*antlr.BaseParser
}

var CppParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func cppParserInit() {
	staticData := &CppParserStaticData
	staticData.LiteralNames = []string{
		"", "", "", "", "", "", "", "", "", "", "'alignas'", "'alignof'", "'asm'",
		"'auto'", "'bool'", "'break'", "'case'", "'catch'", "'char'", "'char16_t'",
		"'char32_t'", "'class'", "'const'", "'constexpr'", "'const_cast'", "'continue'",
		"'decltype'", "'default'", "'delete'", "'do'", "'double'", "'dynamic_cast'",
		"'else'", "'enum'", "'explicit'", "'export'", "'extern'", "'false'",
		"'final'", "'float'", "'for'", "'friend'", "'goto'", "'if'", "'inline'",
		"'int'", "'long'", "'mutable'", "'namespace'", "'new'", "'noexcept'",
		"'nullptr'", "'operator'", "'override'", "'private'", "'protected'",
		"'public'", "'register'", "'reinterpret_cast'", "'return'", "'short'",
		"'signed'", "'sizeof'", "'static'", "'static_assert'", "'static_cast'",
		"'struct'", "'switch'", "'template'", "'this'", "'thread_local'", "'throw'",
		"'true'", "'try'", "'typedef'", "'typeid'", "'typename'", "'union'",
		"'unsigned'", "'using'", "'virtual'", "'void'", "'volatile'", "'wchar_t'",
		"'while'", "'__attribute__'", "'('", "')'", "'['", "']'", "'{'", "'}'",
		"'+'", "'-'", "'*'", "'/'", "'%'", "'^'", "'&'", "'|'", "'~'", "", "'='",
		"'<'", "'>'", "'+='", "'-='", "'*='", "'/='", "'%='", "'^='", "'&='",
		"'|='", "'<<='", "'>>='", "'=='", "'!='", "'<='", "'>='", "", "", "'++'",
		"'--'", "','", "'->*'", "'->'", "'?'", "':'", "'::'", "';'", "'.'",
		"'.*'", "'...'",
	}
	staticData.SymbolicNames = []string{
		"", "IntegerLiteral", "CharacterLiteral", "FloatingLiteral", "StringLiteral",
		"BooleanLiteral", "PointerLiteral", "UserDefinedLiteral", "MultiLineMacro",
		"Directive", "Alignas", "Alignof", "Asm", "Auto", "Bool", "Break", "Case",
		"Catch", "Char", "Char16", "Char32", "Class", "Const", "Constexpr",
		"Const_cast", "Continue", "Decltype", "Default", "Delete", "Do", "Double",
		"Dynamic_cast", "Else", "Enum", "Explicit", "Export", "Extern", "False_",
		"Final", "Float", "For", "Friend", "Goto", "If", "Inline", "Int", "Long",
		"Mutable", "Namespace", "New", "Noexcept", "Nullptr", "Operator", "Override",
		"Private", "Protected", "Public", "Register", "Reinterpret_cast", "Return",
		"Short", "Signed", "Sizeof", "Static", "Static_assert", "Static_cast",
		"Struct", "Switch", "Template", "This", "Thread_local", "Throw", "True_",
		"Try", "Typedef", "Typeid_", "Typename_", "Union", "Unsigned", "Using",
		"Virtual", "Void", "Volatile", "Wchar", "While", "Attribute", "LeftParen",
		"RightParen", "LeftBracket", "RightBracket", "LeftBrace", "RightBrace",
		"Plus", "Minus", "Star", "Div", "Mod", "Caret", "And", "Or", "Tilde",
		"Not", "Assign", "Less", "Greater", "PlusAssign", "MinusAssign", "StarAssign",
		"DivAssign", "ModAssign", "XorAssign", "AndAssign", "OrAssign", "LeftShiftAssign",
		"RightShiftAssign", "Equal", "NotEqual", "LessEqual", "GreaterEqual",
		"AndAnd", "OrOr", "PlusPlus", "MinusMinus", "Comma", "ArrowStar", "Arrow",
		"Question", "Colon", "Doublecolon", "Semi", "Dot", "DotStar", "Ellipsis",
		"Identifier", "DecimalLiteral", "OctalLiteral", "HexadecimalLiteral",
		"BinaryLiteral", "Integersuffix", "UserDefinedIntegerLiteral", "UserDefinedFloatingLiteral",
		"UserDefinedStringLiteral", "UserDefinedCharacterLiteral", "Whitespace",
		"Newline", "BlockComment", "LineComment",
	}
	staticData.RuleNames = []string{
		"cpp", "stmt", "number", "string", "identifier", "comment", "other",
		"keyword", "baseType", "operator",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// CppParserInit initializes any static state used to implement CppParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewCppParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func CppParserInit() {
	staticData := &CppParserStaticData
	staticData.once.Do(cppParserInit)
}

// NewCppParser produces a new parser instance for the optional input antlr.TokenStream.
func NewCppParser(input antlr.TokenStream) *CppParser {
	CppParserInit()
	this := new(CppParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &CppParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "Cpp.g4"

	return this
}

// CppParser tokens.
const (
	CppParserEOF                         = antlr.TokenEOF
	CppParserIntegerLiteral              = 1
	CppParserCharacterLiteral            = 2
	CppParserFloatingLiteral             = 3
	CppParserStringLiteral               = 4
	CppParserBooleanLiteral              = 5
	CppParserPointerLiteral              = 6
	CppParserUserDefinedLiteral          = 7
	CppParserMultiLineMacro              = 8
	CppParserDirective                   = 9
	CppParserAlignas                     = 10
	CppParserAlignof                     = 11
	CppParserAsm                         = 12
	CppParserAuto                        = 13
	CppParserBool                        = 14
	CppParserBreak                       = 15
	CppParserCase                        = 16
	CppParserCatch                       = 17
	CppParserChar                        = 18
	CppParserChar16                      = 19
	CppParserChar32                      = 20
	CppParserClass                       = 21
	CppParserConst                       = 22
	CppParserConstexpr                   = 23
	CppParserConst_cast                  = 24
	CppParserContinue                    = 25
	CppParserDecltype                    = 26
	CppParserDefault                     = 27
	CppParserDelete                      = 28
	CppParserDo                          = 29
	CppParserDouble                      = 30
	CppParserDynamic_cast                = 31
	CppParserElse                        = 32
	CppParserEnum                        = 33
	CppParserExplicit                    = 34
	CppParserExport                      = 35
	CppParserExtern                      = 36
	CppParserFalse_                      = 37
	CppParserFinal                       = 38
	CppParserFloat                       = 39
	CppParserFor                         = 40
	CppParserFriend                      = 41
	CppParserGoto                        = 42
	CppParserIf                          = 43
	CppParserInline                      = 44
	CppParserInt                         = 45
	CppParserLong                        = 46
	CppParserMutable                     = 47
	CppParserNamespace                   = 48
	CppParserNew                         = 49
	CppParserNoexcept                    = 50
	CppParserNullptr                     = 51
	CppParserOperator                    = 52
	CppParserOverride                    = 53
	CppParserPrivate                     = 54
	CppParserProtected                   = 55
	CppParserPublic                      = 56
	CppParserRegister                    = 57
	CppParserReinterpret_cast            = 58
	CppParserReturn                      = 59
	CppParserShort                       = 60
	CppParserSigned                      = 61
	CppParserSizeof                      = 62
	CppParserStatic                      = 63
	CppParserStatic_assert               = 64
	CppParserStatic_cast                 = 65
	CppParserStruct                      = 66
	CppParserSwitch                      = 67
	CppParserTemplate                    = 68
	CppParserThis                        = 69
	CppParserThread_local                = 70
	CppParserThrow                       = 71
	CppParserTrue_                       = 72
	CppParserTry                         = 73
	CppParserTypedef                     = 74
	CppParserTypeid_                     = 75
	CppParserTypename_                   = 76
	CppParserUnion                       = 77
	CppParserUnsigned                    = 78
	CppParserUsing                       = 79
	CppParserVirtual                     = 80
	CppParserVoid                        = 81
	CppParserVolatile                    = 82
	CppParserWchar                       = 83
	CppParserWhile                       = 84
	CppParserAttribute                   = 85
	CppParserLeftParen                   = 86
	CppParserRightParen                  = 87
	CppParserLeftBracket                 = 88
	CppParserRightBracket                = 89
	CppParserLeftBrace                   = 90
	CppParserRightBrace                  = 91
	CppParserPlus                        = 92
	CppParserMinus                       = 93
	CppParserStar                        = 94
	CppParserDiv                         = 95
	CppParserMod                         = 96
	CppParserCaret                       = 97
	CppParserAnd                         = 98
	CppParserOr                          = 99
	CppParserTilde                       = 100
	CppParserNot                         = 101
	CppParserAssign                      = 102
	CppParserLess                        = 103
	CppParserGreater                     = 104
	CppParserPlusAssign                  = 105
	CppParserMinusAssign                 = 106
	CppParserStarAssign                  = 107
	CppParserDivAssign                   = 108
	CppParserModAssign                   = 109
	CppParserXorAssign                   = 110
	CppParserAndAssign                   = 111
	CppParserOrAssign                    = 112
	CppParserLeftShiftAssign             = 113
	CppParserRightShiftAssign            = 114
	CppParserEqual                       = 115
	CppParserNotEqual                    = 116
	CppParserLessEqual                   = 117
	CppParserGreaterEqual                = 118
	CppParserAndAnd                      = 119
	CppParserOrOr                        = 120
	CppParserPlusPlus                    = 121
	CppParserMinusMinus                  = 122
	CppParserComma                       = 123
	CppParserArrowStar                   = 124
	CppParserArrow                       = 125
	CppParserQuestion                    = 126
	CppParserColon                       = 127
	CppParserDoublecolon                 = 128
	CppParserSemi                        = 129
	CppParserDot                         = 130
	CppParserDotStar                     = 131
	CppParserEllipsis                    = 132
	CppParserIdentifier                  = 133
	CppParserDecimalLiteral              = 134
	CppParserOctalLiteral                = 135
	CppParserHexadecimalLiteral          = 136
	CppParserBinaryLiteral               = 137
	CppParserIntegersuffix               = 138
	CppParserUserDefinedIntegerLiteral   = 139
	CppParserUserDefinedFloatingLiteral  = 140
	CppParserUserDefinedStringLiteral    = 141
	CppParserUserDefinedCharacterLiteral = 142
	CppParserWhitespace                  = 143
	CppParserNewline                     = 144
	CppParserBlockComment                = 145
	CppParserLineComment                 = 146
)

// CppParser rules.
const (
	CppParserRULE_cpp        = 0
	CppParserRULE_stmt       = 1
	CppParserRULE_number     = 2
	CppParserRULE_string     = 3
	CppParserRULE_identifier = 4
	CppParserRULE_comment    = 5
	CppParserRULE_other      = 6
	CppParserRULE_keyword    = 7
	CppParserRULE_baseType   = 8
	CppParserRULE_operator   = 9
)

// ICppContext is an interface to support dynamic dispatch.
type ICppContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EOF() antlr.TerminalNode
	AllStmt() []IStmtContext
	Stmt(i int) IStmtContext

	// IsCppContext differentiates from other interfaces.
	IsCppContext()
}

type CppContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCppContext() *CppContext {
	var p = new(CppContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = CppParserRULE_cpp
	return p
}

func InitEmptyCppContext(p *CppContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = CppParserRULE_cpp
}

func (*CppContext) IsCppContext() {}

func NewCppContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CppContext {
	var p = new(CppContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = CppParserRULE_cpp

	return p
}

func (s *CppContext) GetParser() antlr.Parser { return s.parser }

func (s *CppContext) EOF() antlr.TerminalNode {
	return s.GetToken(CppParserEOF, 0)
}

func (s *CppContext) AllStmt() []IStmtContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IStmtContext); ok {
			len++
		}
	}

	tst := make([]IStmtContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IStmtContext); ok {
			tst[i] = t.(IStmtContext)
			i++
		}
	}

	return tst
}

func (s *CppContext) Stmt(i int) IStmtContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStmtContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStmtContext)
}

func (s *CppContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CppContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *CppContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CppListener); ok {
		listenerT.EnterCpp(s)
	}
}

func (s *CppContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CppListener); ok {
		listenerT.ExitCpp(s)
	}
}

func (p *CppParser) Cpp() (localctx ICppContext) {
	localctx = NewCppContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, CppParserRULE_cpp)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(23)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for ((int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&-2) != 0) || ((int64((_la-64)) & ^0x3f) == 0 && ((int64(1)<<(_la-64))&-1) != 0) || ((int64((_la-128)) & ^0x3f) == 0 && ((int64(1)<<(_la-128))&524287) != 0) {
		{
			p.SetState(20)
			p.Stmt()
		}

		p.SetState(25)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(26)
		p.Match(CppParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IStmtContext is an interface to support dynamic dispatch.
type IStmtContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Directive() antlr.TerminalNode
	MultiLineMacro() antlr.TerminalNode
	Keyword() IKeywordContext
	BaseType() IBaseTypeContext
	Operator() IOperatorContext
	String_() IStringContext
	Number() INumberContext
	Identifier() IIdentifierContext
	Comment() ICommentContext
	Other() IOtherContext

	// IsStmtContext differentiates from other interfaces.
	IsStmtContext()
}

type StmtContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStmtContext() *StmtContext {
	var p = new(StmtContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = CppParserRULE_stmt
	return p
}

func InitEmptyStmtContext(p *StmtContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = CppParserRULE_stmt
}

func (*StmtContext) IsStmtContext() {}

func NewStmtContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StmtContext {
	var p = new(StmtContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = CppParserRULE_stmt

	return p
}

func (s *StmtContext) GetParser() antlr.Parser { return s.parser }

func (s *StmtContext) Directive() antlr.TerminalNode {
	return s.GetToken(CppParserDirective, 0)
}

func (s *StmtContext) MultiLineMacro() antlr.TerminalNode {
	return s.GetToken(CppParserMultiLineMacro, 0)
}

func (s *StmtContext) Keyword() IKeywordContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IKeywordContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IKeywordContext)
}

func (s *StmtContext) BaseType() IBaseTypeContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBaseTypeContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBaseTypeContext)
}

func (s *StmtContext) Operator() IOperatorContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IOperatorContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IOperatorContext)
}

func (s *StmtContext) String_() IStringContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStringContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStringContext)
}

func (s *StmtContext) Number() INumberContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(INumberContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(INumberContext)
}

func (s *StmtContext) Identifier() IIdentifierContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IIdentifierContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IIdentifierContext)
}

func (s *StmtContext) Comment() ICommentContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICommentContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICommentContext)
}

func (s *StmtContext) Other() IOtherContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IOtherContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IOtherContext)
}

func (s *StmtContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StmtContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StmtContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CppListener); ok {
		listenerT.EnterStmt(s)
	}
}

func (s *StmtContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CppListener); ok {
		listenerT.ExitStmt(s)
	}
}

func (p *CppParser) Stmt() (localctx IStmtContext) {
	localctx = NewStmtContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, CppParserRULE_stmt)
	p.SetState(38)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 1, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(28)
			p.Match(CppParserDirective)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(29)
			p.Match(CppParserMultiLineMacro)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(30)
			p.Keyword()
		}

	case 4:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(31)
			p.BaseType()
		}

	case 5:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(32)
			p.Operator()
		}

	case 6:
		p.EnterOuterAlt(localctx, 6)
		{
			p.SetState(33)
			p.String_()
		}

	case 7:
		p.EnterOuterAlt(localctx, 7)
		{
			p.SetState(34)
			p.Number()
		}

	case 8:
		p.EnterOuterAlt(localctx, 8)
		{
			p.SetState(35)
			p.Identifier()
		}

	case 9:
		p.EnterOuterAlt(localctx, 9)
		{
			p.SetState(36)
			p.Comment()
		}

	case 10:
		p.EnterOuterAlt(localctx, 10)
		{
			p.SetState(37)
			p.Other()
		}

	case antlr.ATNInvalidAltNumber:
		goto errorExit
	}
